Translation Manager - use gettext in templates

--- a/translations/en.json
+++ b/translations/en.json
@@ -1,3 +1,4 @@
 {
-  "welcome_message": "Welcome to FastKit, Admin panel developed in FastAPI."
+  "welcome_message": "Welcome to FastKit, Admin panel developed in FastAPI.",
+  "sign_in": "Sign in"
 }
