Translate reset password page

--- a/translations/en.json
+++ b/translations/en.json
@@ -4,6 +4,8 @@
     "sign_in": "Sign in",
     "email": "Email address",
     "password": "Password",
+    "confirm_password": "Confirm password",
+    "reset_password": "Reset password",
     "forgot_password": "Forgot password?",
     "forgot_password_title": "Forgot password",
     "submit": "Submit"
