--- a/translations/en.json
+++ b/translations/en.json
@@ -21,15 +21,20 @@
     "actions": "Actions",
     "no_items_found": "No items can be found.",
     "failed_delete": "Failed to delete",
+    "back": "Back",
+    "save": "Save",
     "users": {
       "title": "Users",
       "search": "Type here...",
       "user": "User",
+      "first_name": "First name",
+      "last_name": "Last name",
       "email": "Email",
       "role": "Role",
       "phone": "Phone",
       "status": "Status",
-      "delete_confirmation": "Are you sure you want to delete this user?"
+      "delete_confirmation": "Are you sure you want to delete this user?",
+      "create_user_title": "Create user"
     }
   }
 
