--- a/translations/en.json
+++ b/translations/en.json
@@ -34,7 +34,8 @@
       "phone": "Phone",
       "status": "Status",
       "delete_confirmation": "Are you sure you want to delete this user?",
-      "create_user_title": "Create user"
+      "create_user_title": "Create user",
+      "edit_user_title": "Edit user"
     }
   }
 
