--- a/translations/en.json
+++ b/translations/en.json
@@ -36,6 +36,13 @@
       "delete_confirmation": "Are you sure you want to delete this user?",
       "create_user_title": "Create user",
       "edit_user_title": "Edit user"
+    },
+    "pages": {
+      "index_title": "Pages",
+      "title": "Title",
+      "slug": "Slug",
+      "published_at": "Published at",
+      "delete_confirmation": "Are you sure you want to delete this page?"
     }
   }
 
