--- a/translations/en.json
+++ b/translations/en.json
@@ -23,6 +23,10 @@
     "failed_delete": "Failed to delete",
     "back": "Back",
     "save": "Save",
+    "dashboard": {
+      "title": "Dashboard",
+      "message": "Hi {user}, welcome to {platform}."
+    },
     "users": {
       "title": "Users",
       "search": "Type here...",
